src/scss/convenience.scss
@import "reset";
@import "_mixins";
@import "_variables";

#convenience-section {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  @include mobile {
    display: flex;
    flex-direction: column;
  }
  .banner-wrap {
    position: relative;
    height: max(20vmin, 200px);
    @include banner;
    .banner-img {
      top: 50% !important;
      @include mobile {
        top: 50% !important;
      }
    }
    .banner-content-wrap {
      @include banner-content-wrap;
      .title {
        @include banner_title;
      }
      .subtitle {
        @include banner_subtitle;
      }
    }
  }
  .l-content {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    width: 47%;
    font-size: 28pt;
    color: $text;
    @include mobile {
      display: grid;
      grid-template-columns: repeat(5, 1fr);
      grid-template-rows: 3fr 1fr 3fr;
      gap: 1rem;
      width: 100%;
      font-size: 21pt;
      padding: 1.5rem;
    }
    .floor-title {
      margin-left: 4rem;
      font-size: 40pt;
      font-weight: 700;
      color: $blue;
      cursor: pointer;
      @include mobile {
        grid-column: 1 / -1;
        justify-self: left;
        left: 0;
        margin-left: 0;
        font-size: 28pt;
      }
    }
    .title-underline {
      position: relative;
      height: 2px;
      margin: 0 4rem;
      background-color: $bordergray;
      @include mobile {
        grid-row-start: 2;
        grid-column: 1 / -1;
        align-self: center;
        width: 100%;
        margin: 0;
      }
    }
    li {
      margin-left: 4rem;
      color: $lighttext;
      cursor: pointer;
      transition: all ease-in-out 0.1s;
      @include mobile {
        align-self: center;
        left: 0;
        margin-left: 0;
      }
      &:hover {
        font-weight: 700;
        color: $strong;
        text-indent: 0.5rem;
        @include mobile {
          text-indent: 0;
        }
      }
    }
    .floor-checked {
      font-weight: 700;
      color: $strong;
      text-indent: 0.5rem;
    }
  }
  .r-content {
    display: block;
    background-color: #f4f4f4;
    overflow: hidden;
    div {
      &:nth-child(even) {
        @include mobile {
          margin-bottom: 0;
          padding-left: 0;
        }
      }
    }
    @include mobile {
      width: 100%;
      height: max-content;
    }
  }
}

.swiper-container {
  position: relative;
  width: initial !important;
  height: initial !important;
}

.swiper-pagination {
  position: absolute;
  bottom: 0.6rem !important;
  left: 50% !important;
  transform: translateX(-50%) !important;
  width: auto !important;
  height: max-content;
  margin: 0 !important;
  @include mobile {
    display: none;
  }
}
.swiper-pagination-bullet {
  padding: 3px 10px !important;
  border-radius: 0 !important;
  width: auto !important;
  height: auto !important;
  text-align: center !important;
  line-height: 30px !important;
  font-size: 12px !important;
  color: #000 !important;
  opacity: 1 !important;
  background: rgba(0, 0, 0, 0.2) !important;
}

.swiper-pagination-bullet-active {
  color: #fff !important;
  background: $lightblue !important;
}

.swiper-slide {
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

.swiper-slide img {
  width: 100%;
  object-fit: contain;
  @include mobile {
    border-radius: 25px;
  }
}

#section-main-building {
  background-color: white;
  .main-building-img {
    height: 100%;
  }
}

